kubernetes/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: chat-app

spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: chatapp-backend
          image: rajnavneet9931/chatapp-backend:latest
          ports:
            - containerPort: 5001

          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"

            requests:
              memory: "256Mi"
              cpu: "250m"
